Implementação do reconhecimento de pessoa e inclusão de arquivo de configurações

--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,4 +1,93 @@
 {
   "version": 0.1,
-  "author": "Anderson Rocha"
+  "author": "Anderson Rocha",
+  "tenants": [
+    {
+      "id": 1,
+      "name": "John",
+      "photos": [
+        "john-01.jpg",
+        "john-02.jpg",
+        "john-03.jpg"
+      ],
+      "visitors": [
+        {
+          "id": 4,
+          "name": "Paul",
+          "photos": [
+            "paul-01.jpg",
+            "paul-02.jpg",
+            "paul-03.jpg"
+          ]
+        },
+        {
+          "id": 5,
+          "name": "Grace",
+          "photos": [
+            "grace-01.jpeg",
+            "grace-02.jpeg",
+            "grace-03.jpeg"
+          ]
+        }
+      ]
+    },
+    {
+      "id": 2,
+      "name": "Mary",
+      "photos": [
+        "mary-01.jpg",
+        "mary-02.jpg",
+        "mary-03.jpg"
+      ],
+      "visitors": [
+        {
+          "id": 6,
+          "name": "Phillip",
+          "photos": [
+            "phillip-01.jpeg",
+            "phillip-02.jpeg",
+            "phillip-03.jpeg"
+          ]
+        },
+        {
+          "id": 7,
+          "name": "Jane",
+          "photos": [
+            "jane-01.jpg",
+            "jane-02.jpg",
+            "jane-03.jpg"
+          ]
+        },
+        {
+          "id": 8,
+          "name": "Matheo",
+          "photos": [
+            "matheo-01.jpg",
+            "matheo-02.jpg",
+            "matheo-03.jpg"
+          ]
+        }
+      ]
+    },
+    {
+      "id": 3,
+      "name": "Joseph",
+      "photos": [
+        "joseph-01.jpg",
+        "joseph-02.jpg",
+        "joseph-03.jpg"
+      ],
+      "visitors": [
+        {
+          "id": 9,
+          "name": "Claire",
+          "photos": [
+            "claire-01.jpg",
+            "claire-02.jpg",
+            "claire-03.jpg"
+          ]
+        }
+      ]
+    }
+  ]
 }
